; ModuleID = '/home/carl/AnghaBench/TDengine/src/util/src/extr_tstrbuild.c_taosStringBuilderAppendInteger.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/util/src/extr_tstrbuild.c_taosStringBuilderAppendInteger.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"%lld\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @taosStringBuilderAppendInteger(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [64 x i8], align 16
  %6 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = getelementptr inbounds [64 x i8], [64 x i8]* %5, i64 0, i64 0
  %8 = load i32, i32* %4, align 4
  %9 = call i64 @sprintf(i8* %7, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %8)
  store i64 %9, i64* %6, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = getelementptr inbounds [64 x i8], [64 x i8]* %5, i64 0, i64 0
  %12 = load i64, i64* %6, align 8
  %13 = call i32 @taosStringBuilderAppendStringLen(i32* %10, i8* %11, i64 %12)
  ret void
}

declare dso_local i64 @sprintf(i8*, i8*, i32) #1

declare dso_local i32 @taosStringBuilderAppendStringLen(i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
